# ayp2_tp2_solucion

./: CMakeLists.txt  README.md  SaveFile.csv  main.cpp
include/: Cola.hpp  Destino.hpp  Inventario.hpp  Item.hpp  Lector.hpp  Lista_de.hpp  Menu.hpp  Nodo.hpp  Nodo_de.hpp
src/: Destino.cpp  Inventario.cpp  Item.cpp  Lector.cpp  Menu.cpp
